@@ -6,7 +6,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import org.apache.commons.math3.stat.descriptive.DescriptiveStatistics;
 import org.api4.java.common.control.ILoggingCustomizable;
 import org.api4.java.datastructure.graph.IPath;
 import org.slf4j.Logger;
@@ -28,12 +27,12 @@ public abstract class AUpdatingPolicy<N, A> implements IPathUpdatablePolicy<N, A
 	}
 
 	public class NodeLabel {
-		public final DescriptiveStatistics scores = new DescriptiveStatistics();
+		double mean;
 		int visits;
 
 		@Override
 		public String toString() {
-			return "NodeLabel [scores=" + this.scores + ", visits=" + this.visits + "]";
+			return "NodeLabel [mean=" + this.mean + ", visits=" + this.visits + "]";
 		}
 	}
 
@@ -47,18 +46,14 @@ public abstract class AUpdatingPolicy<N, A> implements IPathUpdatablePolicy<N, A
 	public void updatePath(final IPath<N, A> path, final Double score) {
 		this.logger.debug("Updating path {} with score {}", path, score);
 		int lastVisits = Integer.MAX_VALUE;
-		double lastMin = -1 * Double.MAX_VALUE;
-		double lastMax = Double.MAX_VALUE;
 		for (N node : path.getNodes()) {
 			NodeLabel label = this.labels.computeIfAbsent(node, n -> new NodeLabel());
+			label.mean = (label.visits * label.mean + score) / (label.visits + 1);
 			label.visits++;
-			label.scores.addValue(score);
-			this.logger.trace("Updated label of node {}. Visits now {}, stats contains {} entries with min/mean/max {}/{}/{}", node, label.visits, label.scores.getN(), label.scores.getMin(), label.scores.getMean(), label.scores.getMax());
-			if (label.visits > lastVisits || label.scores.getMin() < lastMin || label.scores.getMax() > lastMax) {
-				throw new IllegalStateException("Illegal visits/min/max stats of child " + label.visits + "/" + label.scores.getMin() +"/" + label.scores.getMax()  + " compared to parent " + lastVisits + "/" + lastMin + "/" + lastMax + ".");
+			this.logger.trace("Updated label of node {}. Visits now {}, stats contains {} entries with mean {}", node, label.visits, label.mean);
+			if (label.visits > lastVisits) {
+				throw new IllegalStateException("Illegal visits stats of child " + label.visits + " compared to parent " + lastVisits + "\nCheck whether the searched graph is really a tree!");
 			}
-			lastMin = label.scores.getMin();
-			lastMax = label.scores.getMax();
 			lastVisits = label.visits;
 		}
 		this.logger.debug("Path update completed.");
@@ -87,14 +82,13 @@ public abstract class AUpdatingPolicy<N, A> implements IPathUpdatablePolicy<N, A
 			N child = actionsWithTheirSuccessors.get(action);
 			NodeLabel labelOfChild = this.labels.get(child);
 			assert labelOfChild.visits != 0 : "Visits of node " + child + " cannot be 0 if we already used this action before!";
-			assert labelOfChild.scores.getN() != 0 : "Number of observations cannot be 0 if we already visited this node before";
-			this.logger.trace("Considering action {} whose successor state has stats {} and {} visits", action, labelOfChild.scores.getMean(), labelOfChild.visits);
+			this.logger.trace("Considering action {} whose successor state has stats {} and {} visits", action, labelOfChild.mean, labelOfChild.visits);
 			Double score = this.getScore(labelOfNode, labelOfChild);
 			if (score.isNaN()) {
 				throw new IllegalStateException("Score of action " + action + " is NaN, which it must not be!");
 			}
 			scores.put(action, score);
-			assert !(new Double(score).equals(Double.NaN)) : "The score of action " + action + " is NaN, which cannot be the case. Score mean is " + labelOfChild.scores.getMean() + ", number of visits is " + labelOfChild.visits;
+			assert !(Double.valueOf(score).equals(Double.NaN)) : "The score of action " + action + " is NaN, which cannot be the case. Score mean is " + labelOfChild.mean + ", number of visits is " + labelOfChild.visits;
 		}
 		A choice = this.getActionBasedOnScores(scores);
 
